# automated_ml_training

./: README.md  auto-retrain-ml.bundle  pyproject.toml  requirements.txt  sample_report.json
mlproject/: .gitignore  db.sqlite3  requirements.tct  urls.py
mlproject/artifacts/: price_model.joblib
mlproject/data/: prices.csv
mlproject/mlproject/: settings.py  urls.py
mlproject/prices/: views.py
mlproject/prices/management/commands/: retrain_model.py
mlproject/static/css/: styles.css
mlproject/templates/: index.html
plagdetect/: __init__.py  cli.py  core.py  io_utils.py  normalize.py  similarity.py  types.py  webapp.py
plagdetect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plagdetect/static/: index.html
prices/: ml.py  serializers.py  urls.py  views.py
templates/prices/: predict.html
